# rag-hallucination-control

./: .env.example  .gitignore  README.md  docker-compose.yml
apps/web/: README.md  package-lock.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: DemoApp.tsx
data/: corpus_manifest.json
data/eval/: .gitkeep  README.md  dobedub_eval.jsonl
docs/superpowers/specs/: 2026-07-22-claim-level-grounding-guard-design.md
document/dobedub/: README.md
scripts/: sync_dobedub_corpus.sh
services/api/: README.md  pyproject.toml
services/api/app/: main.py
